[tool.poetry]
name = "eletronic-house-ab-testing"
version = "0.1.0"
description = ""
authors = ["Lucas Okamura <lucasokamura@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.10"
pandas = "^1.4.3"
pingouin = "^0.5.2"
numpy = "^1.23.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
